Web Build: 02032016 - #148 - Description text wrapping Issue.

--- a/web/src/web/static/web/design/css/mjp.css
+++ b/web/src/web/static/web/design/css/mjp.css
@@ -892,6 +892,13 @@ input {
     white-space: nowrap;
 }
 
+.jobTableDescription2{
+	max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .systemMessageNotice{
 	font-size: 9px;
 }
